# rag-langgraph

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
app/application/: bootstrap.py
app/application/workflows/: chat_graph.py  chat_state.py
app/domain/services/: answer_service.py  chunking_service.py  ranking_service.py  retrieval_service.py
app/evaluation/: deepeval_runner.py
app/infrastructure/config/: settings.py
app/infrastructure/llm/: factory.py
app/infrastructure/loaders/: document_loaders.py
app/infrastructure/observability/: __init__.py  mlflow_tracker.py
app/infrastructure/vectorstores/: chroma_store.py
app/interfaces/cli/: main.py
data/: 装船机技术方案.docx
docs/: rag_eval_dataset.example.json  rag_langgraph_architecture_design.md
scripts/: run_cli.py
